# python-test-products

./: .flake8  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: settings.py  urls.py
backend/webapp/: urls.py  views.py
backend/webapp/tests/: test_rest.py
backend/webapp/utils/: json_processor.py
